Fix button styling on iOS

--- a/www/styles.css
+++ b/www/styles.css
@@ -1,10 +1,14 @@
 @charset "UTF-8";
-    html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td {
+    html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, input, output {
     margin: 0;
     padding: 0;
     border: 0;
     outline: 0;
     vertical-align: baseline;
+}
+
+input[type="button"] {
+    padding: 0 6px;
 }
 
 a {
